update some files

--- a/save/Makefile
+++ b/save/Makefile
@@ -6,9 +6,7 @@ CFLAGS = -Wall -Wextra -Werror
 
 CFILS = ft_pipex.c  ft_split.c  ft_util_0.c ft_util_1.c ft_util_2.c ft_util_3.c
 
-CFILS_BONUS =   ft_split.c  ft_util_0.c ft_util_1.c ft_util_2.c ft_util_3.c\
-				ft_pipex_bonus.c get_next_line.c get_next_line_utils.c\
-				ft_here_doc_bonus.c ft_util_bonus_0.c 
+CFILS_BONUS =   ft_pipex_bonus.c 
 
 OBJS = $(CFILS:.c=.o)
 
