fix the mandatory part

--- a/save/Makefile
+++ b/save/Makefile
@@ -4,7 +4,7 @@ NAME_BONUS = pipex_bonus
 
 CFLAGS = -Wall -Wextra -Werror
 
-CFILS = ft_parce_all.c ft_pipex.c     ft_split.c     ft_util_0.c    ft_util_1.c    ft_util_2.c
+CFILS = ft_pipex.c  ft_split.c  ft_util_0.c ft_util_1.c ft_util_2.c ft_util_3.c
 
 CFILS_BONUS =   ft_split.c  ft_util_0.c ft_util_1.c ft_util_2.c ft_util_3.c\
 				ft_pipex_bonus.c get_next_line.c get_next_line_utils.c\
